--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "yiisoft/yii2": "~2.0.5",
         "yiisoft/yii2-bootstrap": "~2.0.0",
         "yiisoft/yii2-swiftmailer": "~2.0.0",
-        "kv4nt/yii2-owl-carousel2": "*"
+        "kv4nt/yii2-owl-carousel2": "*",
+        "kop/yii2-scroll-pager": "dev-master"
         
     },
     "require-dev": {
